VSE: 2D Cursor position do not update, when changing values in sidebar and is missing unit #92200

Closed
opened 2021-10-14 10:21:47 +02:00 by tintwotin · 10 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-14 05:41, hash: 4f5ef3b018

Short description of error
VSE: 2D Cursor position do not update, when changing values in sidebar(as it does in the 3d view) and is missing unit:
{F11087456,size=full}

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-14 05:41, hash: `4f5ef3b018` **Short description of error** VSE: 2D Cursor position do not update, when changing values in sidebar(as it does in the 3d view) and is missing unit: {[F11087456](https://archive.blender.org/developer/F11087456/2d_cursor.gif),size=full}
Author

Added subscriber: @tintwotin

Added subscriber: @tintwotin
tintwotin changed title from VSE: 2D Cursor do not update when changing values in sidebar and is missing unit to VSE: 2D Cursor position do not update, when changing values in sidebar and is missing unit 2021-10-14 10:23:06 +02:00
Campbell Barton was assigned by tintwotin 2021-10-14 10:23:35 +02:00
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Campbell Barton was unassigned by Philipp Oeser 2021-10-14 10:24:30 +02:00
Philipp Oeser self-assigned this 2021-10-14 10:24:30 +02:00
Member

Can confirm, will check

Can confirm, will check
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

This issue was referenced by 583939c54d

This issue was referenced by 583939c54deadbb224f77412c09b58a86e66882c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Reg. a unit: this is the 0-1 range of the canvas/image bounds, so does not have a unit like meter or pixel really (same as Image Editor).

Reg. a unit: this is the 0-1 range of the canvas/image bounds, so does not have a unit like meter or pixel really (same as Image Editor).
Author

If it is supposed to be a fraction, then changing fractions into percentage doesn't have any effect:
{F11089394,size=full}

If it is supposed to be a fraction, then changing fractions into percentage doesn't have any effect: {[F11089394](https://archive.blender.org/developer/F11089394/image.png),size=full}
Member

Sorry, this can go out of 0-1, so it is not covered by that.

Sorry, this can go out of 0-1, so it is not covered by that.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92200
No description provided.