Fix T92200: VSE: 2D Cursor position missing viewport update

Was using notifier from wrong space (copy-paste error in rBd04d27b406b8).